0.2.2
-----
1. Fix cover display when re-ordering favourites.

0.2.1
-----
 1. Fix plugin update check.
 2. Remove track/queue duration sleep timers, and replace with option to use
    remaining duration of current track.
 3. Remove swipe to change views; buggy, and material apps don't do this.
 4. Fix deleting playlists.
 5. Center crop background image in mobile now playing info.
 6. Don't add play actions to toolbar for track/album/atist info.
 7. Fix buttons in fullscreen image view.
 8. Remove option to sort favourites, instead allow drag'n'drop re-ordering.
 9. Don't allow pining of favourites  - their IDs seem to change too, and
    why pin a favourite directly?
10. Always use player's current cover image for now playing.
11. Use album artist for album review.
12. Fix player menu in manage players dialog not always showing.

0.2.0
-----
 1. Fix swipe to change views not working after show Information dialog.
 2. Add ellipsis to main toolbar text.
 3. Fix scrollbar initialisation.
 4. Place group players first in drop down menu and in Manage Players dialog.
 5. Auto-switch layout (desktop/mobile) if set to auto and not on mobile device.
 6. If switch desktop/mobile layout in settings, then don't prompt for
    confirmation.
 7. Ignore swipes on now-playing position slider in mobile layout.
 8. Add 'Play album starting at track' to 1st track as well, just for
    consistency.
 9. Fix sync dialog.
10. Detect added/removed players in Manage Players dialog.
11. Add group player management; add, update, and delete.
12. Allow changing player name in Player Settings dialog.
13. Add option to use current track, or queue, duration as sleep timer.
14. When new plugins are detected in Info page, set activePage=SETUP_PLUGINS in
    URL.
15. Group players have replaygain setting.
16. Provide access to player settings from Manage Players dialog.
17. Fix radio actions.

0.1.5
-----
 1. Better image grid sizing.
 2. Set A..Z group size to 10.