@@ -34,11 +34,7 @@
     background-color:#000;
 }
 
-.np-info-card-cover {
-    background:rgba(72, 72, 72, 0.9) !important;
-}
-
-.np-info .theme--dark.v-tabs__bar {
+.np-info-card-cover, .np-info .theme--dark.v-tabs__bar {
     background:rgba(72, 72, 72, 0.9) !important;
 }
 
