@@ -141,6 +141,11 @@ a {
     max-height: 462px;
     padding:4px;
     margin:0px;
+    background-color:rgba(0,0,0,0) !important;
+}
+
+.lms-image-grid div.theme--dark.v-card {
+    background-color:rgba(0,0,0,0) !important;
 }
 
 .image-grid-select-btn, .image-grid-select-btn:hover {
@@ -409,10 +414,10 @@ a {
     margin: 0px;
 }
 
-.np-info-cover {
-    background-size:cover;
-    background-repeat:no-repeat;
-    background-position:center top;
+.bgnd-cover {
+    background-size:cover !important;
+    background-repeat:no-repeat !important;
+    background-position:center top !important;
 }
 
 .ellipsis {
