@@ -1,6 +1,9 @@
 0.2.2
 -----
 1. Fix cover display when re-ordering favourites.
+2. Fix renmaming and deleting favourites.
+3. Use curent cover as queue background.
+4. Use curent artist, album, etc. image as browse background.
 
 0.2.1
 -----
